--- a/stacks.html
+++ b/stacks.html
@@ -6,77 +6,74 @@
   <title>Stacks</title>
   <style>
     table {
-      margin-left: 400px;
+      margin-left: 300px;
       border-collapse: collapse;
     }
     table,
     th,
     td {
-      border: 2px solid #ccc;
+      border-top: 2px solid white;
     }
     th,
     td {
-      padding: 5px;
+      padding: 5px 10px;
       text-align: left;
     }
   </style>
 </head>
 <body>
-  <div class="stackyboi"></div>
+<div class="stackyboi"></div>
 
-  <script type="text/javascript">
-    let currPos = {
-      row: 0,
-      col: 0,
-      len: 5
-    };
+<script type="text/javascript">
+  let currPos = {
+    row: 0,
+    col: 0,
+    len: 5
+  };
 
-    let prevPos = {
-      row: -1,
-      col: 0,
-      len: 5
-    };
+  let prevPos = {
+    row: -1,
+    col: 0,
+    len: 5
+  };
 
-    let gameState = {
-      direction: "right",
-      speed: "300",
-      running: true
-    };
+  let gameState = {
+    direction: "right",
+    speed: "200",
+    running: true
+  };
 
-    let stack = new Array(10).fill(0).map(i => Array(10).fill(0));
+  let stack = new Array(10).fill("O").map(i => Array(10).fill("O"));
 
-    // js prints array lazily on the terminal for some reason. SO you gotto print it like this
-    // console.log(JSON.parse(JSON.stringify(stack)))
+  // js prints array lazily on the terminal for some reason. SO you gotto print it like this
+  // console.log(JSON.parse(JSON.stringify(stack)))
 
-    for (let i = currPos.col; i < currPos.col + currPos.len; ++i) {
-      stack[currPos.row][i] = 1;
-    }
+  for (let i = currPos.col; i < currPos.col + currPos.len; ++i) {
+    stack[currPos.row][i] = 1;
+  }
 
-    // does the oscillation part
-    let foo = async ({ direction, speed, running }) => {
-      //debugger
-      if (running) {
-        if (direction === "right") {
+  let oscillator = null;
+
+  let foo = () => {
+    oscillator = setInterval(() => {
+      if (gameState.running) {
+        if (gameState.direction === "right") {
           if (currPos.col + currPos.len < stack[0].length) {
             console.log("-->>", currPos);
 
-            stack[currPos.row][currPos.col] = 0;
+            stack[currPos.row][currPos.col] = "O";
             stack[currPos.row][currPos.col + currPos.len] = 1;
-
-            await new Promise(r => setTimeout(r, speed));
 
             currPos.col++;
           } else {
             gameState.direction = "left";
           }
-        } else if (direction === "left") {
+        } else if (gameState.direction === "left") {
           if (currPos.col > 0) {
             console.log("<<--", currPos);
 
-            stack[currPos.row][currPos.col] = 1;
-            stack[currPos.row][currPos.col + currPos.len - 1] = 0;
-
-            await new Promise(r => setTimeout(r, speed));
+            stack[currPos.row][currPos.col - 1] = 1;
+            stack[currPos.row][currPos.col + currPos.len - 1] = "O";
 
             currPos.col--;
           } else {
@@ -84,95 +81,102 @@
           }
         }
 
-        //console.log(JSON.parse(JSON.stringify(stack)))
         createTable(stack);
-        return foo(gameState);
       }
+    }, gameState.speed);
+  };
 
-      return 0;
-    };
-
-    // checks stuff
-    let bar = () => {
-      if (prevPos.row == -1) {
-        // init
-        console.log("init");
+  // checks stuff
+  let bar = () => {
+    if (prevPos.row == -1) {
+      // init
+      console.log("init");
+      nextStep();
+    } else {
+      if (currPos.col === prevPos.col) {
+        // perfect
+        console.log("perfect");
         nextStep();
       } else {
-        if (currPos.col === prevPos.col) {
-          // perfect
-          console.log("perfect");
-          nextStep();
+        // wrong
+        if (currPos.len === 1) {
+          // end
+          console.log("end");
+          gameOver();
+          return false;
         } else {
-          // wrong
-          if (currPos.len === 1) {
-            // end
-            console.log("end");
-            gameOver();
-            return false;
-          } else {
-            // imperfect
-            // TODO: conditions
-            console.log("imperfect");
-            currPos.len = currPos.len - 1;
-            nextStep();
-          }
+          // imperfect
+          // TODO: conditions
+          console.log("imperfect");
+          currPos.len = currPos.len - 1;
+          nextStep();
         }
       }
-    };
+    }
+  };
 
-    let nextStep = () => {
-      // clone
-      prevPos = { ...currPos };
+  let nextStep = () => {
+    prevPos = { ...currPos };
 
-      currPos.row = currPos.row + 1;
-      gameState.speed = gameState.speed - 10;
+    currPos.row = currPos.row + 1;
+    gameState.speed = gameState.speed - 10;
 
-      gameState.running = false;
-      foo(gameState);
-
-      gameState.running = true;
-      foo(gameState);
-    };
-
-    let gameOver = () => {
-      gameState.running = false;
-
-      alert("L O S E R");
-    };
-
-    document.addEventListener("click", () => {
-      bar();
-    });
-    
-
-    function createTable(tableData) {
-      var table = document.createElement("table");
-      var tableBody = document.createElement("tbody");
-      var hr = document.createElement("hr");
-      var cp = document.createElement("div");
-
-      tableData.forEach(function(rowData) {
-        var row = document.createElement("tr");
-
-        rowData.forEach(function(cellData) {
-          var cell = document.createElement("td");
-          cell.appendChild(document.createTextNode(cellData));
-          row.appendChild(cell);
-        });
-
-        tableBody.appendChild(row);
-      });
-
-      table.appendChild(tableBody);
-      cp.innerHTML = JSON.stringify(currPos);
-
-      stackyboi.appendChild(cp);
-      stackyboi.appendChild(table);
-      stackyboi.appendChild(hr);
+    for (let i = currPos.col; i < currPos.col + currPos.len; ++i) {
+      stack[currPos.row][i] = 1;
     }
 
-    let stackyboi = document.querySelector(".stackyboi");
-  </script>
+    if (oscillator) {
+      clearInterval(oscillator);
+    }
+
+    foo();
+  };
+
+  let gameOver = () => {
+    gameState.running = false;
+
+    alert("L O S E R");
+  };
+
+  document.addEventListener("click", () => {
+    bar();
+  });
+
+  let createTable = tableData => {
+    let table = document.createElement("table");
+    let tableBody = document.createElement("tbody");
+    let hr = document.createElement("hr");
+    let cp = document.createElement("div");
+    let pp = document.createElement("div");
+
+    tableData.forEach(rowData => {
+      let row = document.createElement("tr");
+
+      rowData.forEach(cellData => {
+        let cell = document.createElement("td");
+        if (cellData === "O") {
+          cell.appendChild(document.createTextNode(cellData));
+        } else if (cellData === 1) {
+          cell.style.background = "#0080ff";
+        }
+        row.appendChild(cell);
+      });
+
+      tableBody.appendChild(row);
+    });
+
+    table.appendChild(tableBody);
+    pp.innerHTML = "prev: " + JSON.stringify(prevPos);
+    cp.innerHTML = "curr: " + JSON.stringify(currPos);
+
+    stackyboi.innerHTML = "";
+    stackyboi.appendChild(pp);
+    stackyboi.appendChild(cp);
+    stackyboi.appendChild(table);
+    stackyboi.appendChild(hr);
+  };
+
+  let stackyboi = document.querySelector(".stackyboi");
+</script>
 </body>
 </html>
